# GeRebin

./: .gitignore  CMakeLists.txt  Config.h  EqualBinning.cc  EqualBinning.hh  FileLoader.cpp  FileLoader.h  GeMPILoader.cpp  GeMPILoader.h  GeRebin  GeRebin.cc  GeRebin.cpp  GeRebin.dsp  GeSpcAnalysisGlobal.hh  GeSpcAnalysisManager.cc  GeSpcAnalysisManager.cpp  GeSpcAnalysisManager.h  GeSpcAnalysisManager.hh  Histogram.cpp  Histogram.h  IBinning.hh  IDithering.hh  IMask.hh  ISave.hh  Makefile  OriginalBinning.cc  OriginalBinning.hh  Process.sh  README.md  ReadMe.txt  Spectrum.cc  Spectrum.cpp  Spectrum.h  StdAfx.cpp  TRandom.cxx  TRandom.h  UniformDithering.cc  UniformDithering.hh  compare.C  config.txt  (+7 more)
Release/: README.txt  config.txt
Release/source/: GeRebin.dsw  GeSpcAnalysisManager.cpp  Spectrum.cpp  Spectrum.h  StdAfx.h  TRandom.cpp
